# neuromem-agents

./: .dockerignore  .gitignore  ADVANCED_FEATURES.md  BIOLOGICAL_DESIGN_SUMMARY.md  BRAIN_REGION_COORDINATION.md  CHANGELOG.md  COMPREHENSIVE_RESULTS.md  CONTRIBUTING.md  Dockerfile  FEATURE_COMPARISON.md  FINAL_DEMO.py  FINAL_REPORT.md  FULL_FEATURES.md  PROJECT_COMPLETED.md  PROMOTION_COPY.md  PUSH_CHECKLIST.md  README.md  RESULTS_SUMMARY.md  RUN_TESTS.md  VISUALIZATION_FIXES.md  advanced_benchmark.py  basic_demo.db  benchmark_test.py  bio_demo.db  config.py  demo.py  demo_brain_coordination.py  demo_efficiency.py  demo_hierarchical.py  demo_persistence.py  demo_plasticity.py  detailed_analysis.json  docker-compose.yml  enhanced_demo.db  example_biological_design.py  example_hippocampus_cortex.py  extended_conversation_test.py  hier_demo.db  install.sh  neuromem.db  (+8 more)
benchmark_results/: rigorous_efficiency_benchmark.json  rigorous_efficiency_benchmark.md  rigorous_efficiency_benchmark_tfidf.json  rigorous_efficiency_benchmark_tfidf.md  rigorous_efficiency_benchmark_tfidf_optimized.json  rigorous_efficiency_benchmark_tfidf_optimized.md  rigorous_efficiency_benchmark_tfidf_optimized_visualization_summary.txt
core/: __init__.py  efficiency_optimizer.py  enhanced_memory_manager.py  hierarchical_memory.py  memory_manager.py  neuromorphic_memory.py  persistence.py  text_embeddings.py  traditional_rag.py
docs/: __init__.py  compatibility_roadmap.md  docker_deployment.md  langchain_integration.md  llamaindex_integration.md  mcp_integration.md  neuromem_architecture_mindmap.md  neuromem_architecture_mindmap_en.md  neuromem_brain_regions_mindmap.md  neuromem_brain_regions_mindmap_en.md
examples/: __init__.py
examples/compatibility/: langchain_chat_openai.py  langchain_retriever.py  llamaindex_query_engine.py  llamaindex_retriever.py  openai_client.js  openai_sdk_client.py  openai_sdk_responses_client.py
examples/configs/: anthropic_proxy.example.json  gemini_proxy.example.json  lmstudio_proxy.example.json  mcp_stdio.example.json  mcp_streamable_http.example.json  ollama_proxy.example.json  openai_proxy.example.json  vllm_proxy.example.json
experiments/: __init__.py  comparison_engine.py  comprehensive_benchmark.py  rigorous_benchmark.py
neuromem/: __init__.py
neuromem/core/: __init__.py  efficiency_optimizer.py  enhanced_memory_manager.py  hierarchical_memory.py  memory_manager.py  neuromorphic_memory.py  persistence.py  text_embeddings.py  traditional_rag.py
neuromem/experiments/: __init__.py  comparison_engine.py  comprehensive_benchmark.py  rigorous_benchmark.py
neuromem/frameworks/: __init__.py  langchain.py  llamaindex.py
neuromem/integrations/: __init__.py  adapters.py  config.py  engine.py  http.py  telemetry.py
neuromem/mcp/: __init__.py  (+1 more)
scripts/: render_brain_region_mindmap.py
tests/: __init__.py  test_compatibility_config.py  test_comprehensive_benchmark.py  test_langchain_adapter.py  test_llamaindex_adapter.py  test_mcp_client_configs.py  test_mcp_server.py  test_openai_compatible_server.py
(+6 files in other folders)
