[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromem-agents"
version = "0.1.0"
description = "Neuromorphic memory management system for AI agents"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Nemo", email = "nemo@example.com"},
    {name = "Lera", email = "lera@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "numpy>=1.21.0",
    "torch>=2.0.0",
    "transformers>=4.20.0",
    "faiss-cpu>=1.7.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0"
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/neuromem-agents"
Repository = "https://github.com/yourusername/neuromem-agents"
Issues = "https://github.com/yourusername/neuromem-agents/issues"