[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "neuromem",
    "neuromem.core",
    "neuromem.experiments",
    "neuromem.frameworks",
    "neuromem.integrations",
    "neuromem.mcp",
    "neuromem.server",
    "core",
    "experiments",
]

[project]
name = "neuromem-agents"
version = "0.2.0"
description = "Neuromorphic memory management system for AI agents"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Nemo", email = "nemo@example.com"},
    {name = "Lera", email = "lera@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0"
]
mcp = [
    "mcp[cli]>=1.26.0"
]
langchain = [
    "langchain-core>=0.2.35",
    "langchain-openai>=0.1.23"
]
llamaindex = [
    "llama-index-core>=0.14.19",
    "llama-index-llms-openai-like>=0.7.1"
]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0"
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.28.0"
]
benchmark = [
    "scikit-learn>=1.4.0"
]
viz = [
    "matplotlib>=3.8.0"
]
research = [
    "torch>=2.0.0",
    "transformers>=4.20.0",
    "faiss-cpu>=1.7.0"
]

[project.scripts]
neuromem-openai-server = "neuromem.server.openai_compatible:main"
neuromem-mcp-server = "neuromem.mcp.server:main"

[project.urls]
Homepage = "https://github.com/Conamara21/neuromem-agents"
Repository = "https://github.com/Conamara21/neuromem-agents"
Issues = "https://github.com/Conamara21/neuromem-agents/issues"
